select2 implementation, layout bugfixes

--- a/Resources/public/css/startbootstrap.overrides.css
+++ b/Resources/public/css/startbootstrap.overrides.css
@@ -1,4 +1,15 @@
+/*
+ * navbar fix
+ */
+.navbar-right {
+    margin-right: 0;
+}
+
+/**
+ * breadcrumbs
+ */
 .arrow-crumb {
+    min-width: 350px;
     float: left;
     padding: 0;
     margin: 0;
